--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+    "name": "Laravel Mix",
+    "engines": {
+        "node": "14.x",
+        "npm": "7.x"
+    },
     "private": true,
     "scripts": {
         "dev": "npm run development",
