chore: update npm package

--- a/package.json
+++ b/package.json
@@ -3,28 +3,27 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "npm watch",
+        "watch-poll": "npm watch -- --watch-options-poll=100",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "production": "mix --production",
         "postinstall": "npm run production"
     },
     "devDependencies": {
-        "axios": "^0.21.1",
-        "browser-sync": "^2.27.4",
-        "cross-env": "^5.1",
-        "datatables.net-responsive-bs4": "^2.2.9",
-        "jquery-easing": "^0.0.1",
-        "js-cookie": "^2.2.1",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.13",
+        "axios": "^1.11.0",
+        "browser-sync": "^3.0.4",
+        "cross-env": "^10.0",
+        "datatables.net-responsive-bs4": "^3.0.5",
+        "jquery.easing": "^1.4.1",
+        "js-cookie": "^3.0.5",
+        "laravel-mix": "^6.0.49",
+        "lodash": "^4.17.21",
         "popper.js": "^1.16.0",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.35.1",
-        "sass-loader": "^7.1.0",
-        "startbootstrap-sb-admin-2": "^4.0.7",
-        "vue-template-compiler": "^2.6.14"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.90.0",
+        "sass-loader": "^16.0.0",
+        "startbootstrap-sb-admin-2": "^4.1.4"
     }
 }
